# npl_example

./: .gitignore  2024_members.csv  2025_members.csv  2026_election.ipynb  README.md  pyproject.toml
outputs/: 大空幸星.txt  平将明.txt  玉木雄一郎.txt  細田健一.txt  西村智奈美.txt
