[project]
name = "collect-arxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "numpy>=2.4.0",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "sickle>=0.7.0",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.1",
    "tqdm>=4.67.1",
    "ipykernel",
    "requests>=2.32.5",
    "duckdb>=1.4.4",
    "fugashi>=1.5.2",
    "unidic-lite>=1.0.8",
    "sudachipy>=0.6.10",
    "sudachidict-core>=20260116",
]

[dependency-groups]
dev = [
    "pyrefly>=0.47.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
